@@ -213,7 +213,7 @@ Gourlay_breaking::combine_demerits (Column_x_positions const &prev,
   /*
     Q: do want globally non-cramped lines, or locally equally cramped lines. 
    */
-  Real demerit = abs (this_one.force_f_) + abs (prev.force_f_ - this_one.force_f_)
+  Real demerit = abs (this_one.force_f_) + 0.1 *abs (prev.force_f_ - this_one.force_f_)
     + break_penalties;
 #else
   Real demerit = abs (this_one.force_f_) + break_penalties;
